--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 
                 document.getElementById('countdown').textContent = 
-                    days + " days " + hours + " hours " + minutes + " mimutes " + seconds + " seconds ";
+                    days + " days " + hours + " hours " + minutes + " minutes " + seconds + " seconds ";
             } else {
                 document.getElementById('countdown').textContent = "Happy 2025!";
             }
